objects/Process_Scheduling__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to execute flow</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fire_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked flow will be executed</inlineHelpText>
        <label>Fire Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Date_Time__c</fullName>
        <inlineHelpText>Next time job will be run</inlineHelpText>
        <label>Next Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Minutes__c</fullName>
        <defaultValue>1440</defaultValue>
        <description>Number of minutes between runs - 1 day = 1440</description>
        <label>Number of Minutes</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_Day__c</fullName>
        <formula>Number_of_Minutes__c / 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Date_Time__c</fullName>
        <label>Run Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Time__c</fullName>
        <description>Last time job was run</description>
        <inlineHelpText>Last time job was run</inlineHelpText>
        <label>Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Process Scheduling</label>
    <nameField>
        <label>Process Scheduling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Scheduling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Greater_than_a_Day</fullName>
        <active>true</active>
        <description>Minutes greater than 1440</description>
        <errorConditionFormula>Number_of_Minutes__c &gt; 1440</errorConditionFormula>
        <errorDisplayField>Number_of_Minutes__c</errorDisplayField>
        <errorMessage>Number of minutes between events must be less than 1440</errorMessage>
    </validationRules>
</CustomObject>